<resources>
    <string name="app_name">MarvelBasket</string>
    <string name="title_activity_home_activiy">HomeActiviy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_add_events">Add Events</string>
    <string name="menu_your_events">Your Events</string>
    <string name="menu_orders">Your Orders</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_about_us">About Us</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
