<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user_home">

    <fragment
        android:id="@+id/nav_user_home"
        android:name="apch.marvelbasket.ui.user.HomeFragment"
        android:label="@string/menu_user_home"
        tools:layout="@layout/fragment_user_home">
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="apch.marvelbasket.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
    </fragment>

    <fragment
        android:id="@+id/nav_shopping"
        android:name="apch.marvelbasket.ui.shopping.ShoppingFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/fragment_shopping">
    </fragment>

    <fragment
        android:id="@+id/nav_your_events"
        android:name="apch.marvelbasket.ui.events.YourEventsFragment"
        android:label="@string/menu_your_events"
        tools:layout="@layout/fragment_your_events" />

    <fragment
        android:id="@+id/nav_add_events"
        android:name="apch.marvelbasket.ui.events.AddEventsFragment"
        android:label="@string/menu_add_events"
        tools:layout="@layout/fragment_add_events" />

    <fragment
        android:id="@+id/nav_orders"
        android:name="apch.marvelbasket.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders">
    </fragment>

    <fragment
        android:id="@+id/nav_friends"
        android:name="apch.marvelbasket.ui.friends.FriendsFragment"
        android:label="@string/menu_friends"
        tools:layout="@layout/fragment_friends"/>

    <fragment
        android:id="@+id/nav_about_us"
        android:name="apch.marvelbasket.ui.about.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us"/>
</navigation>